--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.19.0"
+        "@symfony/webpack-encore": "^0.19.0",
+        "node-sass": "^4.9.2",
+        "sass-loader": "^7.0.3"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -9,5 +11,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production"
+    },
+    "dependencies": {
+        "aos": "^3.0.0-beta.4"
     }
 }
