--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "prismic/php-sdk": "4.0.0-beta",
+        "slim/slim": "3.*",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/expression-language": "^4.1",
@@ -21,9 +24,7 @@
         "symfony/validator": "^4.1",
         "symfony/web-link": "^4.1",
         "symfony/webpack-encore-pack": "*",
-        "symfony/yaml": "^4.1",
-        "slim/slim": "3.*",
-        "prismic/php-sdk": "4.0.0-beta"
+        "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
@@ -72,7 +73,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false
+            "allow-contrib": "true"
         }
     }
 }
